--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -159,7 +159,7 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         <DisplayEquation equation="\\vec{r_D} = 3l sin\\theta \\hat{i} + l cos\\theta\\hat{j}"/>
         <Item>Identify forces that have components parallel to the virtual displacements. For this problem, this would the force of the spring <InlineEquation equation="F_S"/> and the applied load <InlineEquation equation="P"/>.</Item>
         <Item>Remove forces that do no work. </Item>
-        <center><InlineEquation equation="A_x"/>, <InlineEquation equation="A_y"/>, and <InlineEquation equation="G_x"/> do not do any work (dU = 0), so they can be removed. </center>
+        <center><InlineEquation equation="A_x"/>, <InlineEquation equation="A_y"/>, and <InlineEquation equation="G_x"/> do not do any work (<InlineEquation equation="dU = 0"/>), so they can be removed. </center>
         <Item>Differentiate the position coordinates.</Item>
         <DisplayEquation equation="\\vec{dr_B} = l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}"/>
         <DisplayEquation equation="\\vec{dr_D} = 3l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}"/>
