--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -168,7 +168,7 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         <Item>Factor our the common virtual displacement term and solve (in this case, we will factor out <InlineEquation equation="d\\theta"/>)</Item> 
         <DisplayEquation equation="\\Sigma dU = \\vec{P} \\cdot d\\vec{r_D} + \\vec{F_S} \\cdot d\\vec{r_B} = 0"/>
         <DisplayEquation equation="\\Sigma dU = (P \\hat{i}) \\cdot (3l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}) + (-F_s \\hat{i}) \\cdot (l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}) = 0"/>
-        Remember that the dot product of any <InlineEquation equation="\\hat{i}"/> terms with any <InlineEquation equation="\\hat{j}"/> terms is equal to zero becuase the vectorrs are perpendicular, which leaves us with:    
+        Remember that the dot product of any <InlineEquation equation="\\hat{i}"/> terms with any <InlineEquation equation="\\hat{j}"/> terms is equal to zero because the vectors are perpendicular, which leaves us with:    
         <DisplayEquation equation="\\Sigma dU = 3lP cos\\theta \\text{ } d\\theta -F_Sl cos\\theta \\text{ } d\\theta = 0"/>
         Factor out the common <InlineEquation equation="l cos\\theta  \\text{ } d\\theta"/> term: 
         <DisplayEquation equation="\\Sigma dU = (3P - F_S) l cos\\theta  \\text{ } d\\theta = 0"/>
