--- a/src/pages/sta/virtual_work.astro
+++ b/src/pages/sta/virtual_work.astro
@@ -157,18 +157,18 @@ For example, if a truss is completely pinned on one end, it doesn't move, which 
         For this problem, we are defining the coordinates of points B and D from the fixed point A.
         <DisplayEquation equation="\\vec{r_B} = l sin\\theta \\hat{i} + l cos\\theta\\hat{j}"/>
         <DisplayEquation equation="\\vec{r_D} = 3l sin\\theta \\hat{i} + l cos\\theta\\hat{j}"/>
-        <Item>Identify forces that have components parallel to the virtual displacements. For this problem, this would the force of the spring <InlineEquation equation="F_S"/> and the applied load <InlineEquation equation="P"/>.</Item>
+        <Item>Identify forces that have components parallel to the virtual displacements. For this problem, this would be the force of the spring <InlineEquation equation="F_S"/> and the applied load <InlineEquation equation="P"/>.</Item>
         <Item>Remove forces that do no work. </Item>
-        <center><InlineEquation equation="A_x"/>, <InlineEquation equation="A_y"/>, and <InlineEquation equation="G_x"/> do not do any work (<InlineEquation equation="dU = 0"/>), so they can be removed. </center>
+        <InlineEquation equation="A_x"/>, <InlineEquation equation="A_y"/>, and <InlineEquation equation="G_x"/> do not do any work (<InlineEquation equation="dU = 0"/>), so they can be removed. 
         <Item>Differentiate the position coordinates.</Item>
         <DisplayEquation equation="\\vec{dr_B} = l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}"/>
         <DisplayEquation equation="\\vec{dr_D} = 3l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}"/>
         <Item>Apply the Principle of Virtual Work.</Item>
         <DisplayEquation equation="\\Sigma dU = dU_P + dU_{F_S} = 0"/>
-        <Item>Factor out the common virtual displacement term and solve (in this case, we will factor out <InlineEquation equation="d\\theta"/>)</Item> 
+        <Item>Factor out the common virtual displacement term and solve (in this case, we will factor out <InlineEquation equation="d\\theta"/>)</Item>
         <DisplayEquation equation="\\Sigma dU = \\vec{P} \\cdot d\\vec{r_D} + \\vec{F_S} \\cdot d\\vec{r_B} = 0"/>
         <DisplayEquation equation="\\Sigma dU = (P \\hat{i}) \\cdot (3l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}) + (-F_s \\hat{i}) \\cdot (l cos\\theta \\text{ } d\\theta \\hat{i} - l sin\\theta \\text{ } d\\theta \\hat{j}) = 0"/>
-        <p>Remember that the dot product of any <InlineEquation equation="\\hat{i}"/> terms with any <InlineEquation equation="\\hat{j}"/> terms is equal to zero because the vectors are perpendicular, which leaves us with:</p>    
+        Remember that the dot product of any <InlineEquation equation="\\hat{i}"/> terms with any <InlineEquation equation="\\hat{j}"/> terms is equal to zero because the vectors are perpendicular, which leaves us with:    
         <DisplayEquation equation="\\Sigma dU = 3lP cos\\theta \\text{ } d\\theta -F_Sl cos\\theta \\text{ } d\\theta = 0"/>
         Factor out the common <InlineEquation equation="l cos\\theta  \\text{ } d\\theta"/> term: 
         <DisplayEquation equation="\\Sigma dU = (3P - F_S) l cos\\theta  \\text{ } d\\theta = 0"/>
